Refactor index.html to improve structure and accessibility
Removed PHP variables and updated HTML structure, including viewport meta tag and alt attributes for images.

--- a/index.html
+++ b/index.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html lang="id">
-<?php
-$nama = "Lutfiyah Rahmadini";
-$profesi = "Siswa SMK ";
-$email = "lutfiyahrahmadini56@gmail.com";
-$telepon = "087824761592";
-$alamat = "Bekasi, Indonesia";
-?>
 <head>
     <meta charset="UTF-8">
-    <title>Resume | <?= $nama ?></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resume | Lutfiyah Rahmadini</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="container">
 
-    <!-- SIDEBAR -->
     <aside class="sidebar">
-        <img src="diriquu.jpeg" class="profile">
-        <h2><?= $nama ?></h2>
-        <p class="job"><?= $profesi ?></p>
+        <img src="diriquu.jpeg" class="profile" alt="Foto Profil">
+        <h2>Lutfiyah Rahmadini</h2>
+        <p class="job">Siswa SMK</p>
 
         <ul class="info">
-            <li>📍 <?= $alamat ?></li>
-            <li>📧 <?= $email ?></li>
-            <li>📞 <?= $telepon ?></li>
+            <li>📍 Bekasi, Indonesia</li>
+            <li>📧 lutfiyahrahmadini56@gmail.com</li>
+            <li>📞 087824761592</li>
         </ul>
     </aside>
 
-    <!-- MAIN CONTENT -->
     <main class="content">
 
         <section>
@@ -37,7 +29,7 @@ $alamat = "Bekasi, Indonesia";
             <p>
                 Saya adalah seorang siswa jurusan Teknik Komputer dan Jaringan (TKJ)
                 yang memiliki minat di bidang teknologi dan informasi, khususnya jaringan
-                komputer, saya terbiasa memahami dasar-dasar jaringan, saya mampu bekerja mandiri
+                komputer. Saya terbiasa memahami dasar-dasar jaringan dan mampu bekerja mandiri
                 maupun dalam tim.
             </p>
         </section>
@@ -46,9 +38,8 @@ $alamat = "Bekasi, Indonesia";
             <h3>Skills</h3>
             <div class="skills">
                 <span>HTML & CSS Dasar</span>
-                <span>Otomatisasi dan Tata kelola Perkantoran (OTKP)</span>
-                <span>Microsoft office</span>
-                <span>Crimping kabel LAN</span>
+                <span>Microsoft Office</span>
+                <span>Crimping Kabel LAN</span>
                 <span>Basic Drawing</span>
                 <span>Baking</span>
                 <span>DIY</span>
@@ -63,21 +54,12 @@ $alamat = "Bekasi, Indonesia";
                 <li>2023–2026 — SMKN 2 KOTA BEKASI</li>
             </ul>
         </section> 
- 
-        <section>
-            <h3>Pengalaman</h3>
-            <ul>
-                <li>Membuat website sederhana</li>
-                <li>Praktik dasar jaringan komputer</li>
-                <li>Kegiatan Estrakurikuler</li>
-            </ul>
-        </section>
 
         <section>
             <h3>Portfolio</h3>
-            <div class="portfolio">
-                <img src="sertif huaweii.jpeg">
-                <img src="sertif pramuka.jpeg">
+            <div class="portofolio">
+                <img src="sertif huaweii.jpeg" alt="Sertifikat Huawei">
+                <img src="sertif pramuka.jpeg" alt="Sertifikat Pramuka">
             </div>
         </section>
 
@@ -85,6 +67,4 @@ $alamat = "Bekasi, Indonesia";
 </div>
 
 </body>
-
 </html>
-
